...
    button.isSelected = false
    return button
  }()
  
  let usernameTextField: LoginUserInputTextField = {
    let textField = LoginUserInputTextField()
    textField.placeholder = "본인 실명 (통신사 가입 이름)"
    textField.keyboardType = .default
    textField.clearButtonMode = .whileEditing
    return textField
  }()
  
  // ====== 주민등록정보 정보 =======
...
    textView.textColor = .darkGray
    textView.backgroundColor = .none
    textView.isUserInteractionEnabled = false
    return textView
  }()
  
  let authCompleteButton = CompleteButton(frame: .zero, title: "인증 완료")
  
  lazy var guide = contentView.layoutMarginsGuide
  
  // MARK: - Life Cycle
  override init(frame: CGRect) {
    super.init(frame: frame)
...
