...
    if sender == scrollView.selectConturyButton {
      selectPopupVC.sectionTitle = "  국적 선택"
      selectPopupVC.selectionMenus = ["내국인", "외국인"]
      selectPopupVC.passTextField = scrollView.usernameTextField
    } else if sender == scrollView.selectMobileCompany {
      selectPopupVC.sectionTitle = "  통신사 선택"
      selectPopupVC.selectionMenus = ["SKT", "KT", "LGU+", "알뜰폰"]
      selectPopupVC.passTextField = scrollView.userPhoneNumberTextField
    }
    
    selectPopupVC.passBlurView = scrollView.blurView
    selectPopupVC.tableView.reloadData()
    selectPopupVC.modalPresentationStyle = .overFullScreen
...
    return testMethod.evaluate(with: checkStr)
  }
  
  private func errorAlertControllerPresent(_ errorKind: AuthError) {
    DispatchQueue.main.async {
      let alertCtroller = UIAlertController(title: "오류", message: errorKind.rawValue, preferredStyle: .alert)
      alertCtroller.addAction(UIAlertAction(title: "확인", style: .cancel, handler: nil))
      self.present(alertCtroller, animated: true, completion: nil)
    }
  }
  
  private func successPhoneAuth() {
    DispatchQueue.main.async {
...
